syntax = "proto3";
package helloworld;
option go_package=".;helloworld";

service Greeter {
    rpc SayHello (HelloRequest) returns (stream HelloReplay) {}
    rpc SayHelloAgain (stream HelloRequest) returns (HelloReplay) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReplay {
    string message = 1;
}
